fix: delete scrollbar, rethinking inputs

--- a/src/components/Footer/FormFooter/FormFooter.module.scss
+++ b/src/components/Footer/FormFooter/FormFooter.module.scss
@@ -130,6 +130,14 @@
     color: var(--white-60, #a8bed8);
     text-align: left;
   }
+  
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover,
+  &:-webkit-autofill:focus {
+    box-shadow: 0 0 0 1000px var(--darkblue, #002d63) inset;
+
+    -webkit-text-fill-color: var(--white, #fff);
+  }
 
   @media screen and (width <= 1280px) {
     font-size: 24px;
@@ -236,12 +244,10 @@
   cursor: pointer;
   text-decoration-line: underline;
   text-underline-offset: 3px;
+  transition: opacity 0.2s ease;
 
   &:hover {
-    background: var(
-      --radial-blue-45,
-      radial-gradient(closest-side, rgb(3 64 137 / 45%) 0%, rgb(255 255 255 / 0%) 100%)
-    );
+    opacity: 0.6;
   }
 }
 
