--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -14,6 +14,10 @@
   visibility: hidden;
   background-color: var(--shadow);
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   &Open {
     visibility: visible;
   }
