--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -29,7 +29,7 @@
     --input-font-size: 64px;
   }
 
-  @media screen and (width <= 560px) {
+  @media screen and (width <= 690px) {
     --input-side-padding: 5%; // 16px;
     --input-font-size: 32px;
     --input-min-height: 77px;
@@ -37,6 +37,8 @@
 }
 
 .fieldset {
+  z-index: 2;
+
   display: flex;
   flex-direction: column;
 
@@ -51,17 +53,21 @@
 .button {
   position: absolute;
   z-index: 0;
-  bottom: 25%;
+  bottom: 300px;
   left: 50%;
   transform: translateX(-50%);
 
   @media screen and (width <= 1280px) {
-    bottom: 20%;
+    bottom: 210px;
   }
 
   @media screen and (width <= 768px) {
     max-width: 280px;
     max-height: 280px;
+  }
+
+  @media screen and (width <= 768px) {
+    bottom: 180px;
   }
 }
 
@@ -92,6 +98,7 @@
 
   box-sizing: border-box;
   width: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
 
@@ -115,12 +122,29 @@
       letter-spacing: normal;
     }
   }
+
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover,
+  &:-webkit-autofill:focus {
+    box-shadow: 0 0 0 1000px #fff inset;
+
+    -webkit-text-fill-color: var(--dark-blue, #002d63);
+  }
 }
 
 .textarea {
   resize: none;
+
   position: relative;
-  min-height: var(--input-min-height);
+
+  display: block;
+
+  min-height: 100%;
+
+  // margin-top: 0.10em;
+
+  // min-height: var(--input-min-height);
+  padding-top: 2%;
 
   &::-webkit-scrollbar {
     display: none;
@@ -132,7 +156,11 @@
     left: 0;
     transform: translateY(-50%);
 
-    line-height: 0;
+    // line-height: 0;
+
+    @media screen and (width <= 1280px) {
+      padding-top: 0;
+    }
 
     @media screen and (width <= 1060px) {
       line-height: 64px;
@@ -149,13 +177,8 @@
   grid-column: 1 / span 1;
   grid-row: 1 / span 1;
   flex-direction: column;
-  row-gap: 10px;
   align-self: stretch;
   justify-content: center;
-
-  @media screen and (width <= 690px) {
-    row-gap: 5px;
-  }
 }
 
 .textNumber {
@@ -174,11 +197,7 @@
   &Error {
     color: var(--error, #bf1700) !important;
 
-    -webkit-text-stroke: var(--error, #bf1700);
-  }
-
-  @media screen and (width <= 1280px) {
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke: unset;
   }
 
   @media screen and (width <= 1060px) {
@@ -195,8 +214,7 @@
 }
 
 .textClue {
-  overflow: hidden;
-
+  box-sizing: border-box;
   max-height: 1px;
 
   font-family: Germano-Regular, sans-serif;
@@ -221,26 +239,37 @@
     font-size: 20px;
   }
 
-  @media screen and (width <= 768px) {
+  @media screen and (width <= 690px) {
     font-size: 16px;
   }
 }
 
-.inputError {
+.inputErrorWrap {
+  overflow-x: hidden; // for word-wrap
   display: none;
   grid-column: 2 / span 1;
   grid-row: 2 / span 1;
+
+  width: 100%;
+  min-height: max-content;
+  padding-bottom: 10px;
+
+
+  &Visible {
+    display: block;
+  }
+}
+
+.inputError {
+  width: 100%;
+  max-width: 100%;
 
   font-family: Germano-Regular, sans-serif;
   font-size: 48px;
   font-weight: 400;
   line-height: 1;
   color: var(--error, #bf1700);
-  text-align: left;
-
-  &Active {
-    display: flex;
-  }
+  word-wrap: break-word;
 
   @media screen and (width <= 1280px) {
     font-size: 40px;
@@ -248,10 +277,6 @@
 
   @media screen and (width <= 768px) {
     font-size: 32px;
-  }
-
-  @media screen and (width <= 690px) {
-    font-family: 'GOST type B', sans-serif;
   }
 
   @media screen and (width <= 360px) {
@@ -269,7 +294,7 @@
   width: 100%;
   padding: 0 var(--input-side-padding);
 
-  @media screen and (width <= 560px) {
+  @media screen and (width <= 690px) {
     display: block;
   }
 }
@@ -294,7 +319,7 @@
   }
 
   @media screen and (width <= 768px) {
-    margin-bottom: 560px;
+    margin-bottom: 690px;
   }
 
   @media screen and (width <= 360px) {
@@ -343,6 +368,11 @@
   cursor: pointer;
   text-decoration-line: underline;
   text-underline-offset: 5px;
+  transition: opacity 0.2s ease;
+
+  &:hover {
+    opacity: 0.6;
+  }
 
   @media screen and (width <= 360px) {
     text-underline-offset: 3px;
@@ -356,7 +386,6 @@
 .input:focus + .textContainer,
 .input:not(:placeholder-shown) + .textContainer {
   .textNumber {
-    font-size: calc(var(--number-font-size) * 0.8);
     color: var(--dark-blue, #002d63);
 
     -webkit-text-stroke: unset;
@@ -364,7 +393,13 @@
 
   .textClue {
     max-height: 50px;
+    padding-top: 10px;
+    padding-bottom: 5px;
     opacity: 1;
+
+    @media screen and (width <= 690px) {
+      padding-top: 5px;
+    }
   }
 }
 
